Blender Internal: Rendered Viewport Preview works incorrectly with light groups #46212

Closed
opened 2015-09-22 18:27:48 +02:00 by Philip Holzmann · 7 comments

System Information
Windows 7 64 bit with 64 bit Blender
Nvidia GTX 750Ti

Blender Version
Broken: (example: 2.76.1 034cc85)

Short description of error
Render via F12 works correctly.
But in the viewport with shading set to "Rendered" does not, if you use light groups.
The light vector of the lamp in the group is somehow off.

Scene Content
This blend file shows a monkey with a simple NPR material on it. In the material nodes, you see the two materials

  • DiffuseBase: A simple material, only diffuse with 100% intensity, pure white, specular is disabled. Everything else is default.
  • SpecularBase: A copy of "DiffuseBase", but it uses the light group "Specular", the "Exclusive" checkbox is checked. (It is meant to fake Specularity, but it only uses diffuse, so it easier to control.)

There are two lights in the scene:

  • DirectLight: A hemi. All values are default.
  • Specular: A sun lamp. All values are default. It is part of the "Specular" group.
    (This way the material "DiffuseBase" is lit by "DirectLight", and "SpecularBase" is lit by "Specular)

Exact steps for others to reproduce the error
bug.blend
Render the scene (F12)
Jump to the second frame (the camera moves to another location) and render again (into another slot).
As you can see, the specular highlights are in the exact same location and did not change with the view angle. This is the correct behavior.

Now use the "Rendered Preview" in the viewport. Move the camera (not the camera object, only your viewport camera, using the middle mouse button) around.
You can see that the highlights move! (Even though they are only using Lambert!)
If you perform certain actions (like jumping to another frame via the left or right-button), the highlights jump back to the correct location, until you move the camera again.

**System Information** Windows 7 64 bit with 64 bit Blender Nvidia GTX 750Ti **Blender Version** Broken: (example: 2.76.1 034cc85) **Short description of error** Render via F12 works correctly. But in the viewport with shading set to "Rendered" does not, if you use light groups. The light vector of the lamp in the group is somehow off. **Scene Content** This blend file shows a monkey with a simple NPR material on it. In the material nodes, you see the two materials - DiffuseBase: A simple material, only diffuse with 100% intensity, pure white, specular is disabled. Everything else is default. - SpecularBase: A copy of "DiffuseBase", but it uses the light group "Specular", the "Exclusive" checkbox is checked. (It is meant to fake Specularity, but it only uses diffuse, so it easier to control.) There are two lights in the scene: - DirectLight: A hemi. All values are default. - Specular: A sun lamp. All values are default. It is part of the "Specular" group. (This way the material "DiffuseBase" is lit by "DirectLight", and "SpecularBase" is lit by "Specular) **Exact steps for others to reproduce the error** [bug.blend](https://archive.blender.org/developer/F237156/bug.blend) Render the scene (F12) Jump to the second frame (the camera moves to another location) and render again (into another slot). As you can see, the specular highlights are in the exact same location and did not change with the view angle. This is the correct behavior. Now use the "Rendered Preview" in the viewport. Move the camera (not the camera object, only your viewport camera, using the middle mouse button) around. You can see that the highlights move! (Even though they are only using Lambert!) If you perform certain actions (like jumping to another frame via the left or right-button), the highlights jump back to the correct location, until you move the camera again.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Foaly

Added subscriber: @Foaly

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2015-09-23 09:55:46 +02:00

This issue was referenced by b0951f4954

This issue was referenced by b0951f49547475e5f9749bc2db8fa2b30f7be13c

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46212
No description provided.