Fix T46212: blender internal lights in exclusive light group wrong in viewport.